<resources>
    <string name="app_name">Repair Order</string>
    <string name="repair_order">Repair Order</string>
    <string name="total">Total</string>
    <string name="subtotal">Subtotal</string>
    <string name="tax">Tax</string>
    <string name="textview">TextView</string>
    <string name="order_type">Order Type</string>
    <string name="technician">Technician</string>
    <string name="inspection">Inspection</string>
    <string name="paint">Paint</string>
    <string name="labor">Labor</string>
    <string name="parts">Parts</string>
    <string name="submit">Submit</string>
    <string name="_0_00">$0.00</string>
    <string-array name="order_type_items">
        <item>IDK</item>
        <item>HAHAHA</item>
        <item>Regular</item>
        <item>Extra</item>
        <item>Pepperoni Pizza</item>
    </string-array>
</resources>