<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/labor_edittext"
        android:layout_width="214dp"
        android:layout_height="38dp"
        android:layout_marginTop="160dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/inspection_edittext"
        app:layout_constraintTop_toBottomOf="@+id/inspection_edittext" />

    <EditText
        android:id="@+id/total_edittext"
        android:layout_width="58dp"
        android:layout_height="43dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tax_edittext" />

    <TextView
        android:id="@+id/total_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/total"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/tax_textview"
        app:layout_constraintTop_toBottomOf="@+id/tax_textview" />

    <TextView
        android:id="@+id/subtotal_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="592dp"
        android:layout_marginEnd="100dp"
        android:text="@string/subtotal"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tax_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tax"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/subtotal_textview"
        app:layout_constraintTop_toBottomOf="@+id/subtotal_textview" />

    <TextView
        android:id="@+id/header_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repair_order"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="177dp"
        android:text="@string/textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_text_view" />

    <TextView
        android:id="@+id/order_type_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="256dp"
        android:text="@string/order_type"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/technician_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/technician"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/order_type_textview"
        app:layout_constraintTop_toBottomOf="@+id/order_type_textview" />

    <TextView
        android:id="@+id/inspection_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/inspection"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/technician_textview"
        app:layout_constraintTop_toBottomOf="@+id/technician_textview" />

    <TextView
        android:id="@+id/paint_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/paint"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/inspection_textview"
        app:layout_constraintTop_toBottomOf="@+id/inspection_textview" />

    <TextView
        android:id="@+id/parts_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/parts"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/paint_textview"
        app:layout_constraintTop_toBottomOf="@+id/paint_textview" />

    <TextView
        android:id="@+id/labor_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/labor"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/parts_textview"
        app:layout_constraintTop_toBottomOf="@+id/parts_textview" />

    <EditText
        android:id="@+id/order_type_edittext"
        android:layout_width="214dp"
        android:layout_height="38dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="148dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@+id/order_type_textview"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/technician_edittext"
        android:layout_width="214dp"
        android:layout_height="38dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/order_type_edittext"
        app:layout_constraintTop_toBottomOf="@+id/order_type_edittext" />

    <EditText
        android:id="@+id/inspection_edittext"
        android:layout_width="214dp"
        android:layout_height="38dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/technician_edittext"
        app:layout_constraintTop_toBottomOf="@+id/technician_edittext" />

    <EditText
        android:id="@+id/paint_edittext"
        android:layout_width="214dp"
        android:layout_height="38dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/inspection_edittext"
        app:layout_constraintTop_toBottomOf="@+id/inspection_edittext" />

    <EditText
        android:id="@+id/parts_edittext"
        android:layout_width="214dp"
        android:layout_height="38dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/paint_edittext"
        app:layout_constraintTop_toBottomOf="@+id/paint_edittext" />

    <EditText
        android:id="@+id/subtotal_edittext"
        android:layout_width="58dp"
        android:layout_height="43dp"
        android:layout_marginTop="584dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tax_edittext"
        android:layout_width="58dp"
        android:layout_height="43dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtotal_edittext" />

</androidx.constraintlayout.widget.ConstraintLayout>